# ChangeLog for net-analyzer/nagios-plugins
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.26 2004/10/25 03:05:45 weeve Exp $

  24 Oct 2004; Jason Wever <weeve@gentoo.org>
  nagios-plugins-1.3.1-r1.ebuild:
  Stable on sparc.

  20 Aug 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  Fixed ebuild for binary install. Closes bug #58928.

  20 Aug 2004; Eldad Zack <eldad@gentoo.org>
  +files/nagios-plugins-noradius.patch, nagios-plugins-1.3.1-r1.ebuild:
  Disabled building of check_radius. See bug #45139.

  04 Aug 2004; Jon Hood <squinky86@gentoo.org> nagios-plugins-1.3.1-r1.ebuild,
  nagios-plugins-1.3.1.ebuild:
  Move enewuser syntax to pkg_preinst() irt #58526.

  24 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  Added contrib plugins to install. As a special case, insert check_nagios_db.pl
  directly into libexec when emerge with db support. Closes #57429.

  11 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  marked x86 stable

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml,
  nagios-plugins-1.3.1-r1.ebuild, nagios-plugins-1.3.1.ebuild:
  Added metadata

  09 Jul 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild,
  nagios-plugins-1.3.1.ebuild:
  Tidy up, fixed use flag typo

*nagios-plugins-1.3.1-r1 (12 Feb 2004)

  12 Feb 2004; rob holland <tigger@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  new nagios-plugins ebuild with hopefully more sensible useflags/dependancies

  15 Dec 2003; Martin Holzer <mholzer@gentoo.org> nagios-plugins-1.3.1.ebuild:
  x86 stable.

*nagios-plugins-1.3.1 (26 Nov 2003)

  26 Nov 2003; Martin Holzer <mholzer@gentoo.org> nagios-plugins-1.3.1.ebuild:
  Version bumped.

*nagios-plugins-1.3.0-r2 (26 Nov 2003)

  26 Nov 2003; Martin Holzer <mholzer@gentoo.org>
  nagios-plugins-1.3.0-r2.ebuild:
  adding RESTRICT="nomirror"
