@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/nagios-plugins
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.26 2004/10/25 03:05:45 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.27 2004/11/21 11:08:39 eldad Exp $
+
+  21 Nov 2004; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
+  contribs nitpicks: chmod all .pl script +x, fixed interpreter,
+  check_file_age.pl: fixed use clause. Thanks to Matt Van Wormer
+  <matt@broadleafservices.com>. Closes #68292.
 
   24 Oct 2004; Jason Wever <weeve@gentoo.org>
   nagios-plugins-1.3.1-r1.ebuild:
